--- a/app/src/main/res/layout/collection_objective_activity.xml
+++ b/app/src/main/res/layout/collection_objective_activity.xml
@@ -93,7 +93,7 @@
         <Button
             style="@style/btn_collection"
             android:id="@+id/btn_save_button"
-            android:text="Save"
+            android:text="@string/save"
             android:layout_margin="@dimen/very_small" />
 
     </LinearLayout>
