--- a/app/src/main/res/layout/collection_subjective_activity.xml
+++ b/app/src/main/res/layout/collection_subjective_activity.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Climber Strap Installation Difficulty"
+                android:text="@string/climber_strap_installation_difficulty"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
@@ -53,35 +53,35 @@
                     <RadioButton
                         android:id="@+id/radio_one"
                         style="@style/radio_btns"
-                        android:text="1"
+                        android:text="@string/radio_btn_one"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
 
                     <RadioButton
                         android:id="@+id/radio_two"
                         style="@style/radio_btns"
-                        android:text="2"
+                        android:text="@string/radio_btn_two"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
 
                     <RadioButton
                         android:id="@+id/radio_three"
                         style="@style/radio_btns"
-                        android:text="3"
+                        android:text="@string/radio_btn_three"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
 
                     <RadioButton
                         android:id="@+id/radio_four"
                         style="@style/radio_btns"
-                        android:text="4"
+                        android:text="@string/radio_btn_four"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
 
                     <RadioButton
                         android:id="@+id/radio_five"
                         style="@style/radio_btns"
-                        android:text="5"
+                        android:text="@string/radio_btn_five"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
                 </RadioGroup>
@@ -98,35 +98,35 @@
                     <RadioButton
                         android:id="@+id/radio_six"
                         style="@style/radio_btns"
-                        android:text="6"
+                        android:text="@string/radio_btn_six"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
 
                     <RadioButton
                         android:id="@+id/radio_seven"
                         style="@style/radio_btns"
-                        android:text="7"
+                        android:text="@string/radio_btn_seven"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
 
                     <RadioButton
                         android:id="@+id/radio_eight"
                         style="@style/radio_btns"
-                        android:text="8"
+                        android:text="@string/radio_btn_eight"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
 
                     <RadioButton
                         android:id="@+id/radio_nine"
                         style="@style/radio_btns"
-                        android:text="9"
+                        android:text="@string/radio_btn_nine"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
 
                     <RadioButton
                         android:id="@+id/radio_ten"
                         style="@style/radio_btns"
-                        android:text="10"
+                        android:text="@string/radio_btn_ten"
                         android:gravity="center"
                         android:onClick="onRadioButtonClicked" />
                 </RadioGroup>
@@ -147,14 +147,14 @@
         android:inputType="textMultiLine"
         android:background="@drawable/edittext_border"
         android:layout_margin="@dimen/very_small"
-        android:hint="Climber installation notes" />
+        android:hint="@string/climber_installation_notes" />
 
     <Button
         android:layout_height="0dp"
         android:layout_width="match_parent"
         android:layout_weight="1"
         android:id="@+id/btn_save_button"
-        android:text="Save"
+        android:text="@string/save"
         android:textSize="40dp"
         android:layout_margin="@dimen/very_small" />
 </LinearLayout>
