--- a/app/src/main/res/layout/camera_preview_activity.xml
+++ b/app/src/main/res/layout/camera_preview_activity.xml
@@ -30,7 +30,7 @@
             android:id="@+id/capture_button"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_action_name"
+            android:src="@drawable/camera_button"
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:scaleType="fitCenter" />
