--- a/app/src/main/res/layout/collection_objective_activity.xml
+++ b/app/src/main/res/layout/collection_objective_activity.xml
@@ -29,7 +29,7 @@
             android:gravity="center_vertical"
             android:background="@color/green"
             android:layout_margin="20dp"
-            android:src="@drawable/ic_action_name"
+            android:src="@drawable/camera_button"
             android:scaleType="fitCenter" />
     </LinearLayout>
 
