add colors and remove drivetrain (#88)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="green">#FFB3FFB3</color>
     <color name="dark_gray">#AFAFAF</color>
     <color name="yellow">#FFF5D6</color>
+    <color name="light_orange">#FFEAC0</color>
 </resources>
