--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,12 @@
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
     <color name="red">#F4CCCC</color>
+    <color name="dark_red">#ff5454</color>
     <color name="blue">#CFE2F3</color>
     <color name="light_gray">#E9ECEB</color>
     <color name="purple">#D4A3F7</color>
     <color name="green">#FFB3FFB3</color>
+    <color name="dark_green">#9adb9a</color>
     <color name="dark_gray">#AFAFAF</color>
     <color name="yellow">#FFF5D6</color>
     <color name="light_orange">#FFEAC0</color>
