--- a/app/src/main/res/layout/collection_objective_activity.xml
+++ b/app/src/main/res/layout/collection_objective_activity.xml
@@ -53,8 +53,7 @@
             android:id="@+id/tb_flag_cheesecake"
             android:layout_weight="0.5"
             android:textOn="@string/flagged_cheesecake"
-            android:textOff="@string/flag_cheesecake"
-            android:checked="true"/>
+            android:textOff="@string/flag_cheesecake" />
 
     </LinearLayout>
 
@@ -80,8 +79,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:textOff="@string/no_vision"
-            android:textOn="@string/has_vision"
-            android:checked="true">
+            android:textOn="@string/has_vision">
         </ToggleButton>
 
     </LinearLayout>
@@ -125,8 +123,7 @@
             android:layout_height="match_parent"
             android:layout_weight="0.5"
             android:textOff="@string/no_ground_intake"
-            android:textOn="@string/ground_intake"
-            android:checked="true">
+            android:textOn="@string/ground_intake">
         </ToggleButton>
 
         <ToggleButton
@@ -145,7 +142,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.3"
         android:orientation="vertical">
 
         <Spinner
