Fix color changes when data is recorded and add color key

--- a/app/src/main/res/layout/team_list_activity.xml
+++ b/app/src/main/res/layout/team_list_activity.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="50px"
+        android:src="@drawable/ic_color_key">
+    </ImageView>
+
     <ListView
         android:id="@+id/lv_teams_list"
         android:layout_width="match_parent"
