--- a/app/src/main/res/layout/collection_objective_activity.xml
+++ b/app/src/main/res/layout/collection_objective_activity.xml
@@ -25,10 +25,10 @@
             android:id="@+id/btn_camera"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight=".5"
+            android:layout_weight=".3"
             android:gravity="center_vertical"
             android:layout_margin="10dp"
-            android:background="@color/dark_green"
+            android:background="@drawable/camera_button_round"
             android:src="@drawable/camera_button"
             android:scaleType="fitCenter" />
     </LinearLayout>
@@ -160,7 +160,9 @@
             style="@style/btn_collection"
             android:id="@+id/btn_save_button"
             android:text="@string/save"
-            android:layout_margin="@dimen/very_small" />
+            android:layout_margin="@dimen/very_small"
+            android:background="@color/dark_green"
+            />
 
     </LinearLayout>
 
