--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="blue">#CFE2F3</color>
     <color name="light_gray">#E9ECEB</color>
     <color name="purple">#D4A3F7</color>
+    <color name="pretty_purple">#E0B0FF</color>
     <color name="green">#FFB3FFB3</color>
     <color name="dark_green">#9adb9a</color>
     <color name="dark_gray">#AFAFAF</color>
