--- a/app/src/main/res/layout/camera_preview_activity.xml
+++ b/app/src/main/res/layout/camera_preview_activity.xml
@@ -4,6 +4,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/full_robot_picture_taken"
+            android:text="@string/picture_type_one"
+            style="@style/tv_pictures_taken" />
+
+        <Button
+            android:id="@+id/drivetrain_picture_taken"
+            android:text="@string/picture_type_two"
+            style="@style/tv_pictures_taken" />
+
+        <Button
+            android:id="@+id/intake_picture_taken"
+            android:text="@string/picture_type_three"
+            style="@style/tv_pictures_taken" />
+
+        <Button
+            android:id="@+id/indexer_picture_taken"
+            android:text="@string/picture_type_four"
+            style="@style/tv_pictures_taken" />
+
+        <Button
+            android:id="@+id/shooter_picture_taken"
+            android:text="@string/picture_type_five"
+            style="@style/tv_pictures_taken" />
+
+        <Button
+            android:id="@+id/climber_picture_taken"
+            android:text="@string/picture_type_six"
+            style="@style/tv_pictures_taken" />
+    </LinearLayout>
+
     <Button
         android:layout_height="0dp"
         android:layout_width="match_parent"
