--- a/app/src/main/res/layout/camera_preview_activity.xml
+++ b/app/src/main/res/layout/camera_preview_activity.xml
@@ -21,22 +21,22 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/intake_picture_taken"
+            android:id="@+id/intake_picture_type"
             android:text="@string/picture_type_four"
             style="@style/tv_pictures_taken" />
 
         <Button
-            android:id="@+id/indexer_picture_taken"
+            android:id="@+id/indexer_picture_type"
             android:text="@string/picture_type_five"
             style="@style/tv_pictures_taken" />
 
         <Button
-            android:id="@+id/shooter_picture_taken"
+            android:id="@+id/shooter_picture_type"
             android:text="@string/picture_type_six"
             style="@style/tv_pictures_taken" />
 
         <Button
-            android:id="@+id/climber_picture_taken"
+            android:id="@+id/climber_picture_type"
             android:text="@string/picture_type_seven"
             style="@style/tv_pictures_taken" />
     </LinearLayout>
@@ -48,17 +48,17 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/full_robot_picture_taken"
+            android:id="@+id/full_robot_picture_type"
             android:text="@string/picture_type_one"
             style="@style/tv_pictures_taken" />
 
         <Button
-            android:id="@+id/full_robot_2_picture_taken"
+            android:id="@+id/full_robot_2_picture_type"
             android:text="@string/picture_type_two"
             style="@style/tv_pictures_taken" />
 
         <Button
-            android:id="@+id/drivetrain_picture_taken"
+            android:id="@+id/drivetrain_picture_type"
             android:text="@string/picture_type_three"
             style="@style/tv_pictures_taken" />
 
@@ -84,12 +84,5 @@
             android:layout_weight="1"
             android:scaleType="fitCenter" />
 
-        <Spinner
-            android:id="@+id/picture_type"
-            android:layout_height="match_parent"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:background="@color/light_gray"
-            android:textAlignment="center" />
     </LinearLayout>
 </LinearLayout>
