add camera picture preview

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="dark_gray">#AFAFAF</color>
     <color name="yellow">#FFF5D6</color>
     <color name="light_orange">#FFEAC0</color>
+    <color name="cancel_red">#C92020</color>
 </resources>
