--- a/app/src/main/res/layout/camera_confirmation_activity.xml
+++ b/app/src/main/res/layout/camera_confirmation_activity.xml
@@ -19,14 +19,12 @@
             android:padding="15dp"
             android:textAlignment="center" />
 
-        <TextView
+        <TextView style="@style/tv_picture_type"
             android:id="@+id/tv_picture_type"
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:textSize="30dp"
-            android:padding="15dp"
-            android:textAlignment="center" />
+         />
 
     </LinearLayout>
 
