--- a/app/src/main/res/layout/collection_objective_activity.xml
+++ b/app/src/main/res/layout/collection_objective_activity.xml
@@ -39,14 +39,14 @@
         android:layout_weight="1">
 
         <ToggleButton
-            style="@style/tb_collection"
-            android:id="@+id/tb_can_climb"
-            android:textOff="@string/cannot_climb"
-            android:textOn="@string/can_climb">
+            style="@style/tb_collection_horizontal"
+            android:id="@+id/tb_has_communication"
+            android:textOff="@string/has_communication"
+            android:textOn="@string/no_communication">
         </ToggleButton>
 
         <ToggleButton
-            style="@style/tb_collection"
+            style="@style/tb_collection_horizontal"
             android:id="@+id/tb_has_vision"
             android:textOff="@string/no_vision"
             android:textOn="@string/has_vision">
@@ -60,19 +60,30 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <ToggleButton
-            style="@style/tb_collection"
-            android:id="@+id/tb_can_intake_ground"
-            android:textOff="@string/no_ground_intake"
-            android:textOn="@string/ground_intake">
-        </ToggleButton>
-
-        <ToggleButton
-            style="@style/tb_collection"
-            android:id="@+id/tb_can_move_under_low_rung"
-            android:textOff="@string/cannot_move_under_rung"
-            android:textOn="@string/can_move_under_rung">
-        </ToggleButton>
+        <EditText
+            style="@style/tb_collection_horizontal"
+            android:id="@+id/et_weight"
+            android:background="@color/light_gray"
+            android:hint="@string/weight">
+        </EditText>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:orientation="vertical">
+            <EditText
+                style="@style/tb_collection_vertical"
+                android:id="@+id/et_length"
+                android:background="@color/light_gray"
+                android:hint="@string/length">
+            </EditText>
+            <EditText
+                style="@style/tb_collection_vertical"
+                android:id="@+id/et_width"
+                android:background="@color/light_gray"
+                android:hint="@string/width">
+            </EditText>
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -89,7 +100,9 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@color/light_gray"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            android:hint="@string/spin_drivetrain"
+            android:gravity="center"/>
 
         <Spinner
             android:id="@+id/spin_drivetrain_motor_type"
@@ -98,7 +111,9 @@
             android:layout_weight="1"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:background="@color/light_gray" />
+            android:background="@color/light_gray"
+            android:hint="@string/spin_drivetrain_motor_type"
+            android:gravity="center"/>
 
     </LinearLayout>
 
