--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,4 +70,14 @@
         <item name="android:padding">15dp</item>
         <item name="android:textAlignment">center</item>
     </style>
+
+    <style name="material_text_field">
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/light_gray</item>
+    </style>
 </resources>
