--- a/app/src/main/res/layout/collection_objective_activity.xml
+++ b/app/src/main/res/layout/collection_objective_activity.xml
@@ -68,7 +68,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 style="@style/material_text_field"
-                android:inputType="number"
+                android:inputType="numberDecimal"
+                android:text=""
                 android:id="@+id/et_weight"
                 android:hint="@string/weight">
             </com.google.android.material.textfield.TextInputEditText>
@@ -88,7 +89,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/et_length"
-                    android:inputType="number"
+                    android:text=""
+                    android:inputType="numberDecimal"
                     android:hint="@string/length">
                 </com.google.android.material.textfield.TextInputEditText>
             </com.google.android.material.textfield.TextInputLayout>
@@ -100,7 +102,8 @@
                     style="@style/material_text_field"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="number"
+                    android:inputType="numberDecimal"
+                    android:text=""
                     android:id="@+id/et_width"
                     android:hint="@string/width">
                 </com.google.android.material.textfield.TextInputEditText>
