--- a/app/src/main/res/layout/starting_activity.xml
+++ b/app/src/main/res/layout/starting_activity.xml
@@ -8,14 +8,18 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/small"
         android:gravity="center"
         android:text="@string/team_list_download_failed"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/error_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:layout_marginHorizontal="@dimen/small"
+        android:gravity="center"
+        android:textSize="18sp" />
 
 </LinearLayout>
