Fix keyboard Next button skipping Length field

--- a/app/src/main/res/layout/collection_objective_activity.xml
+++ b/app/src/main/res/layout/collection_objective_activity.xml
@@ -71,7 +71,8 @@
                 android:inputType="numberDecimal"
                 android:text=""
                 android:id="@+id/et_weight"
-                android:hint="@string/weight">
+                android:hint="@string/weight"
+                android:nextFocusDown="@id/et_length">
             </com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
 
