--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:id="@+id/btn_export_flags"
-    android:text="@string/export_flags"
+    android:id="@+id/btn_pit_map"
+    android:text="@string/pit_map"
     android:background="@color/colorPrimaryLight"
     android:textColor="@color/black"
     android:textSize="16sp"
