--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="yellow">#FFF5D6</color>
     <color name="light_orange">#FFEAC0</color>
     <color name="cancel_red">#C92020</color>
+    <color name="white">#FFFFFF</color>
 </resources>
