--- a/app/src/main/res/layout/starting_activity.xml
+++ b/app/src/main/res/layout/starting_activity.xml
@@ -23,4 +23,14 @@
         android:gravity="center"
         android:textSize="18sp" />
 
+    <Button
+        android:id="@+id/refresh_button"
+        android:layout_width="250dp"
+        android:layout_height="125dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="REFRESH"
+        android:textSize="30sp"
+        android:onClick="btnRetryOnClick"/>
+
 </LinearLayout>
