--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,16 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="tv_edit_key">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">55dp</item>
+        <item name="android:textSize">17dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:gravity">left</item>
+    </style>
+
     <style name="tb_collection_vertical">
         <item name="android:background">@drawable/tb_collection_state</item>
         <item name="android:layout_height">0dp</item>
