--- a/app/src/main/res/layout/starting_activity.xml
+++ b/app/src/main/res/layout/starting_activity.xml
@@ -30,8 +30,8 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:text="REFRESH"
-        android:textSize="30sp"
-        android:onClick="btnRetryOnClick"/>
+        android:textSize="30sp"/>
+
     <TextView
         android:id ="@+id/tv_event"
         android:layout_width="150dp"
